Adds some short URLS

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -3,4 +3,7 @@
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
+  <div class="talkapp">
+		<iframe src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlq9r2h1rsj8t3g3faeosch79i1vfk2h1dnfatdqrb4ai4km15noejiaoopr7ig7tv0vuaciasgep35u9b9s13rvf1cg66b8i1g7peqc46oq1mulnv66s2k9ego2pctu7pdvfaathos3vapfm0pqmei5lp1iv6d67go&amp;w=200&amp;h=60" frameborder="0" allowtransparency="true" width="200" height="60"></iframe>
+	</div>
 </hgroup>
