Adds cornify module, aside, and style
Fixes styling and adds  modified cornify module. Include executing code
as an include-able aside.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -257,3 +257,9 @@ ul.gallery {
 
 /* Fix footnotes */
 sup { vertical-align: super; }
+
+/* Fixes for cornify easter egg */
+div.cornified {
+  background: transparent;
+  border: none;
+}
