--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -2,7 +2,7 @@
   <a href="{{ root_url }}/license.html">Copyright &copy; {{ site.time | date: "%Y" }}</a> - {{ site.author }} -
   <a rel="license" href="{{ root_url }}/license.html"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a> -
   <a href="{{ root_url }}/humans.txt"><img class="bottom-img" src="{{ root_url }}/images/humanstxt.png" alt="humans.txt" width="88" height="31" /></a> -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span> -
   <!-- Easter egg -->
   {% include custom/asides/cornify.html %}
 </p>
