--- a/source/_includes/sidebars/blog_index_default.html
+++ b/source/_includes/sidebars/blog_index_default.html
@@ -1,3 +1,4 @@
+{% include custom/asides/endorse.html %}
 {% include custom/asides/gtalk.html %}
 {% include custom/asides/gravatar.html %}
 {% include custom/asides/flickr.html %}
