--- a/source/_includes/sidebars/page_default.html
+++ b/source/_includes/sidebars/page_default.html
@@ -1,3 +1,4 @@
+{% include custom/asides/endorse.html %}
 {% include custom/asides/gravatar.html %}
 {% include sidebars/sections/recent_posts.html %}
 {% include sidebars/sections/github.html %}
