--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -14,6 +14,9 @@
 
 {% fancyboxstylefix %}
 
+<!-- Load Emojify -->
+<link rel="stylesheet" href="{{ root_url }}/stylesheets/emojify.min.css" />
+
 <!-- Custom Scripts -->
 <script type="text/javascript">
   (function($, require) {
