Adds PGP key to sidebar

--- a/source/_includes/sidebars/blog_index_default.html
+++ b/source/_includes/sidebars/blog_index_default.html
@@ -1,5 +1,6 @@
 {% include custom/asides/endorse.html %}
 {% include custom/asides/gravatar.html %}
+{% include custom/asides/pgp.html %}
 {% include custom/asides/flickr.html %}
 {% include sidebars/sections/github.html %}
 {% include sidebars/sections/twitter.html %}
