--- a/source/_includes/sidebars/post_default.html
+++ b/source/_includes/sidebars/post_default.html
@@ -1,5 +1,6 @@
 {% include custom/asides/endorse.html %}
 {% include custom/asides/gravatar.html %}
+{% include custom/asides/pgp.html %}
 {% include sidebars/sections/recent_posts.html %}
 {% include sidebars/sections/twitter.html %}
 {% include sidebars/sections/delicious.html %}
