Adds contact page

--- a/source/devin/mobile-style.css
+++ b/source/devin/mobile-style.css
@@ -16,6 +16,10 @@ img.right {
   display: none;
 }
 
+.table-bottom {
+  margin-top: 40px;
+}
+
 @media screen and (max-width: 320px) {
   #selfpic {
     width: 114px;
