DRY's PGP key identity

--- a/source/_includes/custom/asides/pgp.html
+++ b/source/_includes/custom/asides/pgp.html
@@ -2,7 +2,7 @@
   <h1>PGP Key</h1>
   <p>
     Download key:
-    <a href="{{ root_url }}/key">DE767C8A :closed_lock_with_key:</a><br />
-    <tt>FA9F 1400 8BA5 A847 B097<br />7C06 EBD9 9C92 DE76 7C8A</tt>
+    <a href="{{ root_url }}/key">{{ site.pgp_key_id }} :closed_lock_with_key:</a><br />
+    <tt>{{ site.pgp_fingerprint1 }}<br />{{ site.pgp_fingerprint2 }}</tt>
   </p>
 </section>
