Add a cool CSS effect to the side bar
Found this nifty trick from: http://christianheilmann.com/

Example usage: http://jsbin.com/UQohUduC/1/edit

--- a/source/_includes/custom/asides/endorse.html
+++ b/source/_includes/custom/asides/endorse.html
@@ -1,1 +1,3 @@
-<a href="https://coderwall.com/sukima"><img alt="Endorse sukima on Coderwall" src="http://api.coderwall.com/sukima/endorsecount.png" /></a>
+<section>
+  <a href="https://coderwall.com/sukima"><img alt="Endorse sukima on Coderwall" src="http://api.coderwall.com/sukima/endorsecount.png" /></a>
+</section>
