--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -289,4 +289,36 @@ table tr:nth-child(2n) {
   background-color: #f8f8f8;
 }
 
+/* Fun with side bar */
+
+aside.sidebar section {
+  -webkit-transform: rotateY(-15deg);
+  -moz-transform: rotateY(-15deg);
+  -ms-transform: rotateY(-15deg);
+  -o-transform: rotateY(-15deg);
+  transform: rotateY(-15deg);
+  -webkit-transition: -webkit-transform 1s;
+  -moz-transition: -moz-transform 1s;
+  -o-transition: -o-transform 1s;
+  -ms-transition: -ms-transform 1s;
+  transition: transform 1s;
+}
+
+aside.sidebar:hover section {
+  -webkit-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -moz-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -ms-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  -o-transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+
+aside.sidebar {
+  position:relative;
+  -moz-perspective:1500px;
+  -webkit-perspective:1500px;
+  -ms-perspective:1500px;
+  -o-perspective:1500px;
+  perspective:1500px;
+}
+
 @import "custom/coderwall";
