--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -81,16 +81,28 @@ h6, .h6 {
 .blog-header {
   padding-top: 20px;
   padding-bottom: 20px;
+
+  @media (min-width: $screen-sm) {
+    & {
+      padding-left: 65px;
+      background: url('images/TriTarget_Logo-sm.jpg') no-repeat scroll 0px 60px transparent;
+    }
+  }
 }
 .blog-title {
   margin-top: 30px;
   margin-bottom: 0;
-  font-size: 60px;
   font-weight: normal;
+  font-size: 60px;
+  @media (max-width: $screen-sm-max) {
+    & {
+      font-size: 40px;
+    }
+  }
 }
 .blog-description {
-  font-size: 20px;
   color: #999;
+  font-size: 20px;
 }
 
 
