--- a/styles/layout.less
+++ b/styles/layout.less
@@ -1,10 +1,10 @@
 /*
  * Globals
  */
-
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #555;
+  padding-top: 50px;
 }
 
 h1, .h1,
@@ -32,69 +32,25 @@ h6, .h6 {
 
 
 /*
- * Masthead for nav
- */
-
-.blog-masthead {
-  background-color: #428bca;
-  -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-          box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-}
-
-/* Nav links */
-.blog-nav-item {
-  position: relative;
-  display: inline-block;
-  padding: 10px;
-  font-weight: 500;
-  color: #cdddeb;
-}
-.blog-nav-item:hover,
-.blog-nav-item:focus {
-  color: #fff;
-  text-decoration: none;
-}
-
-/* Active state gets a caret at the bottom */
-.blog-nav .active {
-  color: #fff;
-}
-.blog-nav .active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -5px;
-  vertical-align: middle;
-  content: " ";
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid;
-  border-left: 5px solid transparent;
-}
-
-
-/*
  * Blog name and description
  */
-
 .blog-header {
-  padding-top: 20px;
+  padding-top: 0;
   padding-bottom: 20px;
 
-  @media (min-width: $screen-sm) {
+  @media (min-width: @screen-sm) {
     & {
       padding-left: 65px;
-      background: url('/images/TriTarget_Logo-sm.jpg') no-repeat scroll 0px 60px transparent;
+      background: url('/images/TriTarget_Logo-sm.jpg') no-repeat scroll 0px 10px transparent;
     }
   }
 }
 .blog-title {
-  margin-top: 30px;
+  margin-top: 10px;
   margin-bottom: 0;
   font-weight: normal;
   font-size: 60px;
-  @media (max-width: $screen-sm-max) {
+  @media (max-width: @screen-sm-max) {
     & {
       font-size: 40px;
     }
@@ -136,13 +92,14 @@ h6, .h6 {
 /* Pagination */
 .pager {
   margin-bottom: 60px;
-  text-align: left;
-}
-.pager > li > a {
-  width: 140px;
-  padding: 10px 20px;
-  text-align: center;
-  border-radius: 30px;
+  text-align:    left;
+
+  > li > a {
+    width:         140px;
+    padding:       10px 20px;
+    text-align:    center;
+    border-radius: 30px;
+  }
 }
 
 
