Clean up highlight style include

--- a/styles/index.less
+++ b/styles/index.less
@@ -2,4 +2,4 @@
 @import "bootswatch_vars";
 @import "layout";
 @import "links";
-@import (inline) "../bower_components/highlightjs/styles/solarized_light.css";
+@import (inline) "solarized_light.css";
