Add font-awesome support

--- a/styles/index.less
+++ b/styles/index.less
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "bootswatch_vars";
+@import "font-awesome";
 @import "layout";
 @import "links";
 @import (inline) "solarized_light.css";
