--- a/templates/_footer.hbs
+++ b/templates/_footer.hbs
@@ -8,12 +8,10 @@
 
 <div class="blog-footer">
   <p>Blog template built for <a href="http://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  <p>
-  <a href="#">Back to top</a>
-  </p>
+  <p><a href="#">Back to top</a></p>
 </div>
 
-<script src="/index.js"></script>
+<script src="/js/index.js"></script>
 
 </body>
 </html>
