--- a/templates/_header.hbs
+++ b/templates/_header.hbs
@@ -11,7 +11,7 @@
 
   <title>{{ site.title }}</title>
 
-  <link href="/index.css" rel="stylesheet">
+  <link href="/styles/index.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
