Add link icon to post headers

--- a/templates/_blog_item.hbs
+++ b/templates/_blog_item.hbs
@@ -1,5 +1,5 @@
 <div class="blog-post">
-  <h2 class="blog-post-title"><a href="/{{ path }}">{{ title }}</a></h2>
+  <h2 class="blog-post-title"><a href="/{{ path }}"><i class="fa fa-link title-icon"></i> {{ title }}</a></h2>
   {{> post_header}}
 
   {{#if less}}
