--- a/styles/layout.less
+++ b/styles/layout.less
@@ -50,22 +50,26 @@ h6, .h6 {
   }
 }
 
-.blog-post-title {
-  a {
+.blog-post-title a {
+  color: @headerColor;
+  margin: -50px;
+
+  &:visited {
     color: @headerColor;
-    &:visited {
-      color: @headerColor;
+  }
+
+  &:focus,
+  &:hover {
+    color: @link-hover-color;
+    text-decoration: none;
+
+    .title-icon {
+      visibility: visible;
     }
-    &:hover {
-      color: @headerHoverColor;
-      text-decoration: none;
-    }
-    &:hover:before {
-      content: '☞';
-      position: absolute;
-      top: 0;
-      left: -15px;
-    }
+  }
+
+  .title-icon {
+    visibility: hidden;
   }
 }
 
@@ -80,6 +84,7 @@ h6, .h6 {
     }
   }
 }
+
 .blog-description {
   color: #999;
   font-size: 20px;
