Convert pager buttons to bootstrap buttons

--- a/templates/_blog_item.hbs
+++ b/templates/_blog_item.hbs
@@ -6,9 +6,9 @@
 
     {{{ less }}}
 
-    <ul class="pager">
-      <li><a href="/{{ path }}">Read&nbsp;More…</a></li>
-    </ul>
+    <div>
+      <a class="btn btn-lg btn-info" href="/{{ path }}">Read More…</a>
+    </div>
 
   {{else}}
 
