Breakout sidebar sections to indevidual templates

--- a/templates/_footer.hbs
+++ b/templates/_footer.hbs
@@ -1,8 +1,7 @@
-    </div><!-- /.blog-main -->
 
-    {{> sidebar}}
+  </div>
 
-  </div><!-- /.row -->
+  {{> sidebar}}
 
 </div><!-- /.container -->
 
