--- a/templates/_post_header.hbs
+++ b/templates/_post_header.hbs
@@ -1,3 +1,4 @@
+<h2 class="blog-post-title"><a href="/{{ path }}"><i class="fa fa-link title-icon"></i> {{ title }}</a></h2>
 <p class="blog-post-meta">
   {{formatDateYMD date}}
   {{#if author}}
