--- a/templates/_sidebar.hbs
+++ b/templates/_sidebar.hbs
@@ -1,22 +1,11 @@
-    <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-      <div class="sidebar-module sidebar-module-inset">
-        <h4>About</h4>
-        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-      </div>
-      <div class="sidebar-module">
-        <h4>Recent</h4>
-        <ol class="list-unstyled">
-          {{#each-limit blog 10}}
-          <li><a href="/{{ path }}">{{#chr-gt title 30}}{{truncate title 30 '…'}}{{else}}{{title}}{{/chr-gt}}</a></li>
-          {{/each-limit}}
-        </ol>
-      </div>
-      <div class="sidebar-module">
-        <h4>Elsewhere</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
-        </ol>
-      </div>
-    </div><!-- /.blog-sidebar -->
+<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+  <section class="sidebar-module sidebar-module-inset">
+    {{> about}}
+  </section>
+  <section class="sidebar-module">
+    {{> recent}}
+  </section>
+  <section class="sidebar-module">
+    {{> contact_sidebar}}
+  </section>
+</div><!-- /.blog-sidebar -->
