Parse info.json for "Elsewhere" section

--- a/templates/_contact_sidebar.hbs
+++ b/templates/_contact_sidebar.hbs
@@ -1,6 +1,5 @@
 <h3>Elsewhere</h3>
-<ol class="list-unstyled">
-  <li><a href="#">GitHub</a></li>
-  <li><a href="#">Twitter</a></li>
-  <li><a href="#">Facebook</a></li>
+<ol class="contact-data list-unstyled">
+  <li><i class="fa fa-user"></i> <a href="/devin/">About Me</a></li>
+  <!-- more items appended by lib/contactinfo.coffee -->
 </ol>
