Move PGP lock icon

--- a/templates/_about.hbs
+++ b/templates/_about.hbs
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  <strong>PGP key: <a href="/key"><tt>{{ site.pgp.id }}</tt> <i class="fa fa-lock"></i></a></strong>
+  <strong>PGP key: <a href="/key"><tt>{{ site.pgp.id }}</tt></a> <i class="fa fa-lock"></i></strong>
   <br>
   <tt>{{ site.pgp.fingerprint.[0] }}<br />{{ site.pgp.fingerprint.[1] }}</tt>
 </p>
