--- a/templates/_about.hbs
+++ b/templates/_about.hbs
@@ -5,7 +5,9 @@
 <h3>About</h3>
 
 <p>
-  Adipisicing expedita sit sit hic magni harum est minus quaerat aliquam impedit tenetur itaque consequatur, exercitationem unde consectetur ipsa in iste alias earum. Commodi vero corrupti alias eveniet beatae quis?
+  A passionate software developer specialized in JavaScript, front end and back
+  end, and mobile iOS development. I dabble in photography, 360 panoramic
+  tours, and geek culture.
 </p>
 
 <p>
