--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,5 +1,10 @@
 {{> header}}
 
+<div id="site-quote" class="quote">
+  Be a yardstick of quality. Some people aren't used to an environment where excellence is expected.
+  <div class="cite">~ Steve Jobs</div>
+</div>
+
 {{#each-limit blog 10}}
   {{> blog_item}}
 {{/each-limit}}
