Add tag support

--- a/templates/_post_header.hbs
+++ b/templates/_post_header.hbs
@@ -1,4 +1,11 @@
 <h2 class="blog-post-title"><a href="/{{ path }}"><i class="fa fa-link title-icon"></i> {{ title }}</a></h2>
+{{#if categories}}
+<p class="pull-right blog-post-meta">
+  {{#each categories}}
+  <a href="/categories/{{ this }}">#{{ this }}</a>
+  {{/each}}
+<p>
+{{/if}}
 <p class="blog-post-meta">
   {{formatDateYMD date}}
   {{#if author}}
