--- a/styles/layout.less
+++ b/styles/layout.less
@@ -72,7 +72,7 @@ h6, .h6 {
   }
 
   @media (min-width: @screen-sm) {
-    margin: -50px;
+    margin: -35px;
 
     &:focus,
     &:hover {
@@ -162,7 +162,6 @@ h6, .h6 {
 }
 .blog-post-title {
   margin-bottom: 5px;
-  font-size: 40px;
 }
 .blog-post-meta {
   margin-bottom: 20px;
@@ -191,4 +190,8 @@ h6, .h6 {
 
 .about {
   .hyphens(auto);
+}
+
+.page-header {
+  margin-top: 20px;
 }
