--- a/templates/categories.hbs
+++ b/templates/categories.hbs
@@ -1,6 +1,8 @@
 {{> header}}
 
-<h2>Posts about {{ tag }}</h2>
+<div class="page-header">
+  <h1>Posts about {{ tag }}</h1>
+</div>
 
 {{#each posts}}
   {{> blog_item}}
