--- a/templates/_post_header.hbs
+++ b/templates/_post_header.hbs
@@ -1,4 +1,5 @@
 <h2 class="blog-post-title"><a href="/{{ path }}"><i class="fa fa-link title-icon"></i> {{ title }}</a></h2>
+
 {{#if categories}}
 <p class="pull-right blog-post-meta">
   {{#each categories}}
@@ -6,17 +7,7 @@
   {{/each}}
 <p>
 {{/if}}
+
 <p class="blog-post-meta">
-  {{formatDateYMD date}}
-  {{#if author}}
-    by <strong>
-      {{#if author.name}}
-        {{#if author.href}}<a href="{{ author.href }}">{{/if}}
-          {{ author.name }}
-        {{#if author.href}}</a>{{/if}}
-      {{else}}
-        {{ author }}
-      {{/if}}
-    </strong>
-  {{/if}}
+  {{> post_metadata}}
 </p>
