--- a/templates/categories.hbs
+++ b/templates/categories.hbs
@@ -4,8 +4,16 @@
   <h1>Posts about {{ tag }}</h1>
 </div>
 
+<div class="list-group">
 {{#each posts}}
-  {{> blog_item}}
+  <a href="/{{ path }}" class="list-group-item">
+    <h4 class="list-group-item-heading">{{ title }}</h4>
+    <p class="list-group-item-text">
+    {{> post_metadata}}
+    {{#each categories}}#{{ this }}{{/each}}
+    </p>
+  </a>
 {{/each}}
+</div>
 
 {{> footer}}
