Add better links for whole site

--- a/templates/_header.hbs
+++ b/templates/_header.hbs
@@ -24,7 +24,7 @@
 
 {{> navbar}}
 
-<div class="container">
+<div id="content" class="container">
 
   <div class="blog-header">
     <h1 class="blog-title">{{ site.title }}</h1>
