--- a/templates/_post_header.hbs
+++ b/templates/_post_header.hbs
@@ -1,4 +1,4 @@
-<h2 class="blog-post-title"><a href="/{{ path }}"><i class="fa fa-link title-icon"></i> {{ title }}</a></h2>
+<h2 class="blog-post-title"><a class="normal" href="/{{ path }}"><i class="fa fa-link title-icon"></i> {{ title }}</a></h2>
 
 {{#if categories}}
 <p class="pull-right blog-post-meta">
