--- a/styles/links.less
+++ b/styles/links.less
@@ -6,17 +6,14 @@
   .transition(all 0.2s);
 }
 
-a {
+#content a:not(.normal) {
   text-decoration: none;
+  display:         inline-block;
+  position:        relative;
 
   &:hover {
     text-decoration: underline;
   }
-}
-
-p a {
-  display:  inline-block;
-  position: relative;
 
   &:hover::before {
     left: -4px;
