--- a/templates/_navbar.hbs
+++ b/templates/_navbar.hbs
@@ -22,7 +22,7 @@
         <li {{activeClassFor 'writing'}}><a href="/writing">Creative Writing</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/atom.xml">RSS</a></li>
+        <li><a href="/atom.xml">RSS <i class="fa fa-rss"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
