--- a/templates/categories.hbs
+++ b/templates/categories.hbs
@@ -4,10 +4,12 @@
   <h1>Posts about {{ tag }}</h1>
 </div>
 
-<div class="list-group">
-{{#each posts}}
-  {{> blog_list_item}}
-{{/each}}
+<div class="panel panel-default">
+  <div class="list-group">
+  {{#each posts}}
+    {{> blog_list_item}}
+  {{/each}}
+  </div>
 </div>
 
 {{> footer}}
