--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -9,6 +9,11 @@
     {{#if previous}}<a class="btn btn-lg btn-info" href="/{{ previous.path }}"><i class="fa fa-chevron-left"></i> Previous</a>{{/if}}
     {{#if next}}<a class="btn btn-lg btn-info" href="/{{ next.path }}">Next <i class="fa fa-chevron-right"></i></a>{{/if}}
   </div>
+
+  {{#not-eq comments false}}
+  <div id="disqus_thread"></div>
+  {{/not-eq}}
+
 </div>
 
 {{> footer}}
