--- a/templates/_footer.hbs
+++ b/templates/_footer.hbs
@@ -6,7 +6,7 @@
 </div><!-- /.container -->
 
 <div class="blog-footer">
-  <p>Blog template built for <a href="http://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p><a href="/humans.txt"><img src="/images/humanstxt.png" alt="humans.txt"></a></p>
   <p><a href="#">Back to top</a></p>
 </div>
 
