Fix styles for pager buttons

--- a/templates/_blog_item.hbs
+++ b/templates/_blog_item.hbs
@@ -5,8 +5,8 @@
 
     {{{ less }}}
 
-    <div>
-      <a class="btn btn-lg btn-info" href="/{{ path }}">Read More…</a>
+    <div class="pager">
+      <li><a class="normal" href="/{{ path }}">More…</a></li>
     </div>
 
   {{else}}
