--- a/templates/_blog_list_item.hbs
+++ b/templates/_blog_list_item.hbs
@@ -1,4 +1,4 @@
-<a href="/{{ path }}" class="list-group-item">
+<a href="/{{ path }}" class="list-group-item normal">
   <h4 class="list-group-item-heading">{{ title }}</h4>
   <p class="list-group-item-text">
   {{> post_metadata}}
