--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -5,9 +5,9 @@
 
   {{{ contents }}}
 
-  <div class="btn-group">
-    {{#if previous}}<a class="btn btn-lg btn-info" href="/{{ previous.path }}"><i class="fa fa-chevron-left"></i> Previous</a>{{/if}}
-    {{#if next}}<a class="btn btn-lg btn-info" href="/{{ next.path }}">Next <i class="fa fa-chevron-right"></i></a>{{/if}}
+  <div class="pager">
+    {{#if previous}}<li class="previous"><a class="normal" href="/{{ previous.path }}"><i class="fa fa-chevron-left"></i> Previous</a></li>{{/if}}
+    {{#if next}}<li class="next"><a class="normal" href="/{{ next.path }}">Next <i class="fa fa-chevron-right"></i></a></li>{{/if}}
   </div>
 
   {{#not-eq comments false}}
