Add projects page

--- a/templates/_navbar.hbs
+++ b/templates/_navbar.hbs
@@ -17,7 +17,7 @@
         <li {{activeClassFor 'about'}}><a href="/about">About</a></li>
         <li {{activeClassFor 'badges'}}><a href="/badges">Badges</a></li>
         <li {{activeClassFor 'archives'}}><a href="/archives">Archives</a></li>
-        <li {{activeClassFor 'coding'}}><a href="/coding">Coding</a></li>
+        <li {{activeClassFor 'projects'}}><a href="/projects">Coding</a></li>
         <li {{activeClassFor 'photography'}}><a href="/photography">Photography</a></li>
         <li {{activeClassFor 'writing'}}><a href="/writing">Creative Writing</a></li>
       </ul>
