Add stories page

--- a/templates/_navbar.hbs
+++ b/templates/_navbar.hbs
@@ -20,7 +20,7 @@
         <li {{activeClassFor 'archives'}}><a href="/archives">Archives</a></li>
         <li {{activeClassFor 'projects'}}><a href="/projects">Coding</a></li>
         <li {{activeClassFor 'photography'}}><a href="/photography">Photography</a></li>
-        <li {{activeClassFor 'writing'}}><a href="/writing">Creative Writing</a></li>
+        <li {{activeClassFor 'stories'}}><a href="/stories">Creative Writing</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
