--- a/templates/_recent.hbs
+++ b/templates/_recent.hbs
@@ -1,6 +1,6 @@
 <h3>Recent</h3>
 <ol class="list-unstyled">
   {{#each-limit blog 20}}
-  <li><a href="/{{ path }}">{{#chr-gt title 30}}{{truncate title 30 '…'}}{{else}}{{title}}{{/chr-gt}}</a></li>
+  <li><a href="/{{ path }}" title="{{title}} posted {{formatDateYMD date}}">{{#chr-gt title 30}}{{truncate title 30 '…'}}{{else}}{{title}}{{/chr-gt}}</a></li>
   {{/each-limit}}
 </ol>
