Update footer and humans.txt image

--- a/templates/_footer.hbs
+++ b/templates/_footer.hbs
@@ -5,8 +5,8 @@
 
 </div><!-- /.container -->
 
-<div class="blog-footer">
-  <p><a href="/humans.txt"><img src="/images/humanstxt.png" alt="humans.txt"></a></p>
+<div class="well well-sm blog-footer">
+  <p><a href="/humans.txt"><img src="/images/humanstxt.png" class="img-rounded" alt="humans.txt"></a></p>
   <p><a href="#">Back to top</a></p>
 </div>
 
