--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -9,4 +9,10 @@
 {{> blog_item}}
 {{/each-limit}}
 
+<div class="panel panel-default text-center">
+  <div class="panel-body">
+    <a class="btn btn-info btn-block normal" href="/archives"><i class="fa fa-newspaper-o"></i> Archives</a>
+  </div>
+</div>
+
 {{> footer}}
