Rewrite of contactinfo module
Now supports a data-items attribute that can be any info id and/or "all"
Also has the data-template to change the look of the html

--- a/templates/_contact_sidebar.hbs
+++ b/templates/_contact_sidebar.hbs
@@ -1,5 +1,5 @@
 <h3>Elsewhere</h3>
-<ol class="contact-data list-unstyled">
+<ol class="contact-data list-unstyled" data-items="github,twitter,googleplus">
   <li><i class="fa fa-user"></i> <a href="/devin/">About Me</a></li>
   <!-- more items appended by lib/contactinfo.coffee -->
 </ol>
