--- a/templates/_header.hbs
+++ b/templates/_header.hbs
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+  ASCII Art Here
+-->
 <html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -9,7 +12,7 @@
   <meta name="author" content="{{ site.owner }}">
   <link rel="icon" href="/favicon.png">
 
-  <title>{{ site.title }}</title>
+  <title>{{ site.title }}{{#if title}} - {{ title }}{{/if}}</title>
 
   <link href="/styles/index.css" rel="stylesheet">
 
@@ -26,7 +29,7 @@
 
 <div id="content" class="container">
 
-  <div class="blog-header">
+  <div class="blog-header hidden-print">
     <h1 class="blog-title">{{ site.title }}</h1>
     <p class="lead blog-description">{{ site.description }}</p>
   </div>
