--- a/templates/_footer.hbs
+++ b/templates/_footer.hbs
@@ -5,7 +5,7 @@
 
 </div><!-- /.container -->
 
-<div class="well well-sm blog-footer">
+<div class="well well-sm blog-footer hidden-print">
   <p><a href="/humans.txt"><img src="/images/humanstxt.png" class="img-rounded" alt="humans.txt"></a></p>
   <p><a href="#">Back to top</a></p>
 </div>
