--- a/templates/_sidebar.hbs
+++ b/templates/_sidebar.hbs
@@ -1,4 +1,4 @@
-<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+<div class="col-sm-3 col-sm-offset-1 blog-sidebar hidden-print">
   <section class="sidebar-module sidebar-module-inset">
     {{> about}}
   </section>
