Fix styling for resume page

--- a/styles/resume_print.less
+++ b/styles/resume_print.less
@@ -1,7 +1,5 @@
 @media print {
-  /* * { margin: 0; padding: 0; } */
-  /* body { background: white; color: black; font-family: serif; } */
-  /* .download { display: none; } */
+  body { background: white; color: black; font-family: serif; }
   #resume { font-size: 8pt; }
   #resume a, #resume a:visited { color: black; text-decoration: none; }
   #resume h1, #resume h2, #resume h3, #resume h4, #resume h5, #resume h6 { border: 0 !important; color: black; }
