--- a/styles/resume.less
+++ b/styles/resume.less
@@ -11,7 +11,7 @@
   #resume h1:first-child { margin-top: 30px; padding-top: 0.25em; border-top: none; font-size: 200%; }
   #resume h2 { font-size: 150%; margin-top: 1.5em; border-top: 4px solid #E0E0E0; padding-top: 0.5em; }
   #resume h3 { margin-top: 1em; }
-  #resume p { margin: 1em 0; line-height: auto; }
+  #resume p { margin: 1em 0; }
   #resume ul, #resume ol { margin: 1em 0 1em 2em; }
   #resume ul li, #resume ol li { margin-top: 0.3em; margin-bottom: 0.3em; }
   #resume ul ul, #resume ul ol, #resume ol ul, #resume ol ol { margin-top: 0; margin-bottom: 0; }
