Add print button to resume page

--- a/templates/resume.hbs
+++ b/templates/resume.hbs
@@ -1,5 +1,9 @@
 {{> header}}
 
+<div class="print-page hidden-print pull-right clearfix">
+  <button class="btn btn-info print"><i class="fa fa-print"></i> Print</button>
+</div>
+
 <div id="resume">
 {{{ contents }}}
 </div>
