Add resume secion in navbar

--- a/templates/_navbar.hbs
+++ b/templates/_navbar.hbs
@@ -21,6 +21,7 @@
         <li {{activeClassFor 'projects'}}><a href="/projects">Coding</a></li>
         <li {{activeClassFor 'photography'}}><a href="/photography">Photography</a></li>
         <li {{activeClassFor 'stories'}}><a href="/stories">Creative Writing</a></li>
+        <li {{activeClassFor 'resume'}}><a href="/resume">Résumé</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
