Add pano helper

--- a/styles/index.less
+++ b/styles/index.less
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "bootswatch_vars";
 @import "font-awesome";
+@import "mixins";
 @import "layout";
 @import "links";
 @import "quotes";
@@ -8,3 +9,4 @@
 @import (inline) "solarized_light.css";
 @import "resume";
 @import "resume_print";
+@import "photos";
