Add lightbox support

--- a/styles/index.less
+++ b/styles/index.less
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "bootswatch_vars";
 @import "font-awesome";
+@import "ekko-lightbox";
 @import "mixins";
 @import "layout";
 @import "links";
