Fix style issues
linenumbers in gists and ok/bad colors.

--- a/styles/badges.less
+++ b/styles/badges.less
@@ -18,3 +18,12 @@
 .email {
   .badge-icon(18px, url(/images/badges/mail.gif))
 }
+.ok {
+  color: green;
+}
+.probably {
+  color: #bfbf00;
+}
+.bad {
+  color: red;
+}
