Fix overflow content

--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -3,7 +3,9 @@
 <div class="blog-post">
   {{> post_header}}
 
+  <div class="blog-content">
   {{{ contents }}}
+  </div>
 
   <div class="pager">
     {{! TODO: Have a metalsmith plugin to reverse these. }}
