Add contact info to navbar
Since it is part of the sidebar we can hide it for larger displays.
However it gets squashed to the bottom on smaller displays so have it
visible in the collapsed navbar.

--- a/templates/_navbar.hbs
+++ b/templates/_navbar.hbs
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav">
+        <li class="hidden-md hidden-lg"><a href="/devin">Contact Info <i class="fa fa-external-link"></i></a></li>
         <li {{activeClassFor 'about'}}><a href="/about">About</a></li>
         <li {{activeClassFor 'badges'}}><a href="/badges">Badges</a></li>
         <li {{activeClassFor 'archives'}}><a href="/archives">Archives</a></li>
