--- a/templates/_footer.hbs
+++ b/templates/_footer.hbs
@@ -6,6 +6,7 @@
 </div><!-- /.container -->
 
 <div class="well well-sm blog-footer hidden-print">
+  <p>Page build on {{formatDate site.time "LLLL"}}</p>
   <p><a href="/humans.txt"><img src="/images/humanstxt.png" class="img-rounded" alt="humans.txt"></a></p>
   <p><a href="#">Back to top</a></p>
 </div>
