--- a/styles/badges.less
+++ b/styles/badges.less
@@ -1,29 +1,39 @@
-.badge-icon(@padding, @url) {
-  padding-left: @padding;
-  background:   @url no-repeat center left;
+.badge-icon(@url) {
+  padding-left: 14px !important;
+  background:   url(@url) no-repeat center left;
+}
+
+.badge-list {
+  list-style: none;
+  li {
+    margin-left: -14px;
+  }
 }
 
 .favorite {
-  .badge-icon(12px, url(/images/badges/heart.gif))
+  .badge-icon('/images/badges/heart.gif')
 }
+
 .gold {
-  .badge-icon(14px, url(/images/badges/gold.gif))
+  .badge-icon('/images/badges/gold.gif')
 }
+
 .silver {
-  .badge-icon(14px, url(/images/badges/silver.gif))
+  .badge-icon('/images/badges/silver.gif')
 }
+
 .bronze {
-  .badge-icon(14px, url(/images/badges/bronze.gif))
+  .badge-icon('/images/badges/bronze.gif')
 }
-.email {
-  .badge-icon(18px, url(/images/badges/mail.gif))
-}
+
 .ok {
   color: green;
 }
+
 .probably {
   color: #bfbf00;
 }
+
 .bad {
   color: red;
 }
