Add net nutrality badge
https://www.battleforthenet.com/countdown/

--- a/templates/_header.hbs
+++ b/templates/_header.hbs
@@ -31,6 +31,10 @@
 
 <div id="content" class="container">
 
+  <div class="pull-right" style="margin: 0; padding: 15px 0">
+    <script src="https://fightforthefuture.github.io/countdown-widget/widget.min.js"></script>
+  </div>
+
   <div class="blog-header hidden-print">
     <h1 class="blog-title">{{ site.title }}</h1>
     <p class="lead blog-description">{{ site.description }}</p>
